// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home should change ui when login flow completed 1`] = `
<div
  class="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
  data-uses-unhanded-props="true"
  dir="ltr"
>
  <div>
    accessToken
  </div>
</div>
`;

exports[`Home should initialize Microsoft Teams 1`] = `
<div
  class="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
  data-uses-unhanded-props="true"
  dir="ltr"
>
  <div
    class="ui-flex am ao bq br bs"
    data-uses-unhanded-props="true"
  >
    <div />
    <div
      class="ui-flex am ao bq br bt"
      data-uses-unhanded-props="true"
    >
      <span
        class="ui-text bu bv bw"
        data-uses-unhanded-props="true"
        dir="auto"
      >
        One more step before finishing connection
      </span>
      <span
        class="ui-text"
        data-uses-unhanded-props="true"
        dir="auto"
      >
        Once proceeding, we will ask you to authorize Microsoft Teams access through a separate window. Once it’s authorized, you can do more advanced settings on the Teams channel linked with Zeplin.
      </span>
    </div>
    <div>
      <button
        class="ui-button bx by bz b ca cb cc an al bb cd ce cf cg ch ci cj ck cl cm cn co cp cq cr cs ct cu cv cw cx cy cz da db dc dd de df dg dh di dj dk dl dm dn do dp dq dr ds dt du dv dw dx dy dz ea eb ec ed ee ef eg eh ei ej ek el em en eo ep eq er es et eu ev ew ex ey ez fb fc fd fe ff fg fh fi fj fk fl"
        data-aa-class="Button"
        data-uses-unhanded-props="true"
        dir="auto"
      >
        Log in Zeplin
      </button>
    </div>
  </div>
</div>
`;

exports[`Home should render initially 1`] = `
<div
  class="ui-provider a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ae af ag ah ai aj ak"
  data-uses-unhanded-props="true"
  dir="ltr"
>
  <div
    class="ui-loader al am an ao"
    data-aa-class="Loader"
    data-uses-unhanded-props="true"
    id="loader-home"
    role="progressbar"
  >
    <div
      class="ui-box ap aq ar ui-loader__indicator"
      data-uses-unhanded-props="true"
    >
      <div
        class="ui-box as at au av aw ax ay az ba ar bb bc bd be bf bg bh bi bj bk bl bm bn bo bp ui-loader__svg"
        data-uses-unhanded-props="true"
      />
    </div>
  </div>
</div>
`;
